# GaiaTags

./: CMakeLists.txt  README.md
GaiaTags/: CMakeLists.txt  GaiaTags.hpp  GaiaTagsConfig.cmake  Hodler.cpp  Holder.cpp  Holder.hpp  Index.cpp  Index.hpp  Layer.cpp  Layer.hpp  PackageConfig.cmake.in  Tag.cpp  Tag.hpp
GaiaTagsTest/: CMakeLists.txt  HolderTest.cpp  IndexTest.cpp  TagTest.cpp
